Add Google Apps Script endpoint for form submissions

--- a/index.html
+++ b/index.html
@@ -188,11 +188,10 @@
 const { useState, createContext, useContext } = React;
 
 // ============================================
-// API CONFIG - Update with your Google Apps Script URL
+// API CONFIG - Google Apps Script endpoint
 // ============================================
 const SPENDBASE_API = {
-  // Replace with your deployed Google Apps Script web app URL
-  endpoint: 'YOUR_GOOGLE_APPS_SCRIPT_URL_HERE'
+  endpoint: 'https://script.google.com/macros/s/AKfycbwF2uTFxGqrJvPnwgwQJ54b6mwZCeZ6B9SXJrZq2hmaqb90IKUOazuXXZXsBgy0lE2CfQ/exec'
 };
 
 // Form submission helper
