--- a/index.html
+++ b/index.html
@@ -1383,11 +1383,26 @@ function TermsOfService({ darkMode }) {
 }
 
 function Header({ activeView, setActiveView, onSubscribe, darkMode, setDarkMode, searchTerm, setSearchTerm }) {
+  const [mobileMenuOpen, setMobileMenuOpen] = useState(false);
+  
+  // Navigate to home - clears URL hash and sets view to cards
+  const goHome = () => {
+    window.history.pushState(null, '', '/');
+    setActiveView('cards');
+    setMobileMenuOpen(false);
+  };
+
+  const handleNavClick = (view) => {
+    setActiveView(view);
+    setMobileMenuOpen(false);
+  };
+
   return (
     <header className={`border-b sticky top-0 z-40 backdrop-blur-sm ${darkMode ? 'border-gray-800 bg-gray-950/80' : 'border-gray-200 bg-white/80'}`}>
       <div className="max-w-6xl mx-auto px-4 py-3">
         <div className="flex items-center justify-between gap-4">
-          <button onClick={() => setActiveView('cards')} className="flex-shrink-0">
+          {/* Logo - navigates to home */}
+          <button onClick={goHome} className="flex-shrink-0">
             <img
               src={darkMode
                 ? "https://imagedelivery.net/uYHlHjMhbvNHB1x4JZscLw/135aa8ee-6c5c-4779-7f78-cfbffb724600/public"
@@ -1399,7 +1414,7 @@ function Header({ activeView, setActiveView, onSubscribe, darkMode, setDarkMode,
             />
           </button>
 
-          {/* Search Bar - visible only on cards view */}
+          {/* Search Bar - visible only on cards view, hidden on mobile */}
           {activeView === 'cards' && (
             <div className="flex-1 max-w-md mx-4 relative hidden md:block">
               <SearchIcon className={`absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 ${darkMode ? 'text-gray-500' : 'text-gray-400'}`} />
@@ -1427,11 +1442,12 @@ function Header({ activeView, setActiveView, onSubscribe, darkMode, setDarkMode,
             </div>
           )}
 
+          {/* Desktop Navigation */}
           <nav className="hidden lg:flex items-center gap-1">
             {['cards','wizard','ratings','learn','rewards'].map(v => (
               <button
                 key={v}
-                onClick={() => setActiveView(v)}
+                onClick={() => handleNavClick(v)}
                 className={`px-4 py-2 rounded-lg text-sm font-medium transition ${
                   activeView === v
                     ? (darkMode ? 'bg-gray-800 text-white' : 'bg-gray-100 text-gray-900')
@@ -1442,6 +1458,7 @@ function Header({ activeView, setActiveView, onSubscribe, darkMode, setDarkMode,
             </button>
           ))}
           </nav>
+
           <div className="flex items-center gap-3">
             {/* Dark/Light Mode Toggle */}
             <button
@@ -1451,9 +1468,56 @@ function Header({ activeView, setActiveView, onSubscribe, darkMode, setDarkMode,
             >
               {darkMode ? <SunIcon className="w-5 h-5" /> : <MoonIcon className="w-5 h-5" />}
             </button>
-            <button onClick={onSubscribe} className="bg-gradient-to-r from-purple-500 to-pink-500 px-4 py-2 rounded-lg text-sm font-medium text-white">Subscribe</button>
+            
+            {/* Subscribe button - hidden on small mobile */}
+            <button onClick={onSubscribe} className="hidden sm:block bg-gradient-to-r from-purple-500 to-pink-500 px-4 py-2 rounded-lg text-sm font-medium text-white">Subscribe</button>
+            
+            {/* Mobile Hamburger Menu Button */}
+            <button
+              onClick={() => setMobileMenuOpen(!mobileMenuOpen)}
+              className={`lg:hidden p-2 rounded-lg transition ${darkMode ? 'bg-gray-800 text-white hover:bg-gray-700' : 'bg-gray-100 text-gray-600 hover:bg-gray-200'}`}
+              aria-label="Toggle menu"
+            >
+              {mobileMenuOpen ? (
+                <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M6 18L18 6M6 6l12 12" />
+                </svg>
+              ) : (
+                <svg className="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                  <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 6h16M4 12h16M4 18h16" />
+                </svg>
+              )}
+            </button>
           </div>
         </div>
+
+        {/* Mobile Menu Dropdown */}
+        {mobileMenuOpen && (
+          <div className={`lg:hidden mt-3 pb-3 border-t ${darkMode ? 'border-gray-800' : 'border-gray-200'}`}>
+            <nav className="flex flex-col gap-1 pt-3">
+              {['cards','wizard','learn','rewards'].map(v => (
+                <button
+                  key={v}
+                  onClick={() => handleNavClick(v)}
+                  className={`px-4 py-3 rounded-lg text-sm font-medium transition text-left ${
+                    activeView === v
+                      ? (darkMode ? 'bg-gray-800 text-white' : 'bg-gray-100 text-gray-900')
+                      : (darkMode ? 'text-gray-400 hover:text-white hover:bg-gray-800/50' : 'text-gray-500 hover:text-gray-900 hover:bg-gray-50')
+                  }`}
+                >
+                  {v === 'rewards' ? '🎬 Video Rewards' : v === 'wizard' ? '✨ Find My Card' : v === 'cards' ? '💳 All Cards' : v === 'learn' ? '📚 Learn' : v.charAt(0).toUpperCase()+v.slice(1)}
+                </button>
+              ))}
+              {/* Mobile Subscribe button */}
+              <button 
+                onClick={() => { onSubscribe(); setMobileMenuOpen(false); }} 
+                className="sm:hidden mt-2 bg-gradient-to-r from-purple-500 to-pink-500 px-4 py-3 rounded-lg text-sm font-medium text-white text-center"
+              >
+                Subscribe
+              </button>
+            </nav>
+          </div>
+        )}
       </div>
     </header>
   );
